--- a/rolling/linux-bfq-dev-git/PKGBUILD
+++ b/rolling/linux-bfq-dev-git/PKGBUILD
@@ -55,7 +55,7 @@ pkgbase=linux-bfq-dev-git
 # pkgname=('linux-bfq-dev-git' 'linux-bfq-dev-git-headers' 'linux-bfq-dev-git-docs')
 _major=5.17
 _srcname=linux
-pkgver=5.17.7.r31934.g3cb0d3510053
+pkgver=5.17.9.r31936.gd0437845741c
 pkgrel=2
 pkgdesc='Linux BFQ-dev'
 arch=('x86_64')
@@ -71,7 +71,7 @@ _lucjanpath="https://gitlab.com/sirlucjan/kernel-patches/raw/master/${_major}"
 if [ "$_bfq_rel" = "stable" ]; then
 
  _bfq_name='bfq-lucjan'
- _bfq_ver='r2K220514v1'
+ _bfq_ver='r2K220519v1'
  _bfq_patch="${_major}-${_bfq_name}-${_bfq_ver}.patch"
 
 elif [ "$_bfq_rel" = "unstable" ]; then
@@ -350,7 +350,7 @@ for _p in "${pkgname[@]}"; do
 done
 
 sha512sums=('SKIP'
-            '890bb32612a9b3d9ef4e5634798afb88c162a4e5d0100b7c0e42f1203dbb05f225d3c299f1e1acef4789bfaad17602afc1836b3c722c3fec1b67117bb2e9b52b'
+            'c90f35acf272ca4d61545d85ee04ee0718f3b56f142f3cba7dd4da358c2d3e9b3908a83e308e4c40b5d60fcd6e5b0ac0807b635afa3494817f1de0d4cea0eb9f'
             'b63921b6246bd1b9545a8042d76334bef8a7ee46e5404c5efec4a842a455a84046e92423b2bc6d950f19dcf85805d7493fe71d6d177e3b46b52a279b0a44d0c9'
             'db7645d57a8439e60f68dc58bcf26c106f170847a4dc2ce8de1fae1e021382d5330676fadd7af49519b5bb7e1f0b28a66595b4eaf32ea1c616d4e2c95fae9a23'
             'e898db1663004c60758f74868da0fc4c36cb9c20cb53768b875f12b1af86c9b9d1891f6046ae3a06213b4a6e4259d34b86be865713c85883fef80259a966e558'
