--- a/stable/linux-uksmd-git/PKGBUILD
+++ b/stable/linux-uksmd-git/PKGBUILD
@@ -45,15 +45,15 @@ _1k_HZ_ticks=
 
 ### Do not edit below this line unless you know what you're doing
 
-pkgbase=linux-uksm-git
-# pkgname=('linux-uksm-git' 'linux-uksm-git-headers' 'linux-uksm-git-docs')
+pkgbase=linux-uksmd-git
+# pkgname=('linux-uksmd-git' 'linux-uksmd-git-headers' 'linux-uksmd-git-docs')
 _major=5.17
 _srcname=linux
-pkgver=5.17.7.r0.g7651bb70fe5d
+pkgver=5.17.9.r0.g5c2fc53857eb
 pkgrel=1
-pkgdesc='Linux UKSM'
+pkgdesc='Linux UKSMD'
 arch=('x86_64')
-url="https://github.com/dolohow/uksm"
+url="https://gitlab.com/post-factum/uksmd"
 license=('GPL2')
 options=('!strip')
 makedepends=('bc' 'libelf' 'git' 'python-sphinx' 'python-sphinx_rtd_theme'
@@ -61,15 +61,13 @@ makedepends=('bc' 'libelf' 'git' 'python-sphinx' 'python-sphinx_rtd_theme'
              'texlive-latexextra' 'xmlto')
 #_lucjanpath="https://raw.githubusercontent.com/sirlucjan/kernel-patches/master/${_major}"
 _lucjanpath="https://gitlab.com/sirlucjan/kernel-patches/raw/master/${_major}"
-_uksm_path="uksm-patches-v3"
-#_uksm_path="https://raw.githubusercontent.com/dolohow/uksm/master/v5.x"
-#_uksm_path="https://raw.githubusercontent.com/zaza42/uksm/master"
-_uksm_patch="0001-UKSM-for-${_major}.patch"
+_uksmd_path="ksm-patches"
+_uksmd_patch="0001-${_uksmd_path}.patch"
 _compiler_path="cpu-patches-sep"
 _compiler_patch="0001-cpu-${_major}-merge-graysky-s-patchset.patch"
 
 source=("git://git.kernel.org/pub/scm/linux/kernel/git/stable/${_srcname}.git#branch=linux-${_major}.y"
-        "${_lucjanpath}/${_uksm_path}/${_uksm_patch}"
+        "${_lucjanpath}/${_uksmd_path}/${_uksmd_patch}"
         "${_lucjanpath}/${_compiler_path}/${_compiler_patch}"
         "${_lucjanpath}/arch-patches-v16-sep/0001-ZEN-Add-sysctl-and-CONFIG-to-disallow-unprivileged-C.patch"
         "${_lucjanpath}/arch-patches-v16-sep/0002-random-treat-bootloader-trust-toggle-the-same-way-as.patch"
@@ -191,8 +189,9 @@ _package() {
     depends=('coreutils' 'kmod' 'initramfs')
     optdepends=('wireless-regdb: to set the correct wireless channels of your country'
                 'linux-firmware: firmware images needed for some devices'
-                'modprobed-db: Keeps track of EVERY kernel module that has ever been probed - useful for those of us who make localmodconfig')
-    provides=(VIRTUALBOX-GUEST-MODULES WIREGUARD-MODULE)
+                'modprobed-db: Keeps track of EVERY kernel module that has ever been probed - useful for those of us who make localmodconfig'
+                'uksmd: Userspace KSM helper daemon')
+    provides=(VIRTUALBOX-GUEST-MODULES WIREGUARD-MODULE UKSMD-BUILTIN)
 
   cd $_srcname
   local kernver="$(<version)"
@@ -216,7 +215,7 @@ _package() {
 
 _package-headers() {
     pkgdesc="Headers and scripts for building modules for the $pkgdesc kernel"
-    depends=('linux-uksm-git' 'pahole')
+    depends=('linux-uksmd-git' 'pahole')
 
   cd $_srcname
   local builddir="$pkgdir/usr/lib/modules/$(<version)/build"
@@ -298,7 +297,7 @@ _package-headers() {
 
 _package-docs() {
     pkgdesc="Documentation for the $pkgdesc kernel"
-    depends=('linux-uksm-git')
+    depends=('linux-uksmd-git')
 
   cd $_srcname
   local builddir="$pkgdir/usr/lib/modules/$(<version)/build"
@@ -325,7 +324,7 @@ for _p in "${pkgname[@]}"; do
 done
 
 sha512sums=('SKIP'
-            'bb4112478bddf199b8acdce1bc98368c5014b163952f63f43e1b83b2396534650245a47fd92ea4569129fc94c4279b995b999c9c47bb0f33f455c65631a09765'
+            'cf73767a104132c34937d69fe25e95f5c5bd5da4ff959ba5aca8e45e5fe7cc07540babb0637ffde7459560131f74104ffc3e7e44989b9e9826cea2bff807ae1b'
             'b63921b6246bd1b9545a8042d76334bef8a7ee46e5404c5efec4a842a455a84046e92423b2bc6d950f19dcf85805d7493fe71d6d177e3b46b52a279b0a44d0c9'
             'db7645d57a8439e60f68dc58bcf26c106f170847a4dc2ce8de1fae1e021382d5330676fadd7af49519b5bb7e1f0b28a66595b4eaf32ea1c616d4e2c95fae9a23'
             'e898db1663004c60758f74868da0fc4c36cb9c20cb53768b875f12b1af86c9b9d1891f6046ae3a06213b4a6e4259d34b86be865713c85883fef80259a966e558'
@@ -334,4 +333,4 @@ sha512sums=('SKIP'
             '9d905da7321f165ed36bf42803f80a386c1d09c6335919164871a03dc15ffe8e1204de522099051f3effc07b126f5b2d692f3f7c20d576a384eb56540af890b6'
             'de068782a004f79be4d56a6b207ea1dafc9aeb71688f26ee5f7c5ea1df17e63a29484bba10be1418a2f3643426541471d1bc28a699cfa94f86dc494e44f36712'
             'e0f473fa58e4aa54aa598f5bd5af15b9d3055a7f9cefb73e050ae6602b4474ec4bce60a863f3ab6c2b28c313e9e104cbfedbe782edf0d51b3f136ea9863a4bc4'
-            'a9e84eae77089d9337da4457d1026328d6616bb03f4b2fd0104a492344a6f5b4d1c86b94f53642f00b76f8e72e8c513769cdd8ee7a7792ebf7639990e182949c')
+            'd2b587f4cba42b50793df13479a5cb93f308f538ff431409da04b57a30b88e2c85a831280a1df2e1cef9bae6c4309b62dc42f667b061f067eedc90b4bbd6ba13')
